Login fix overflow

--- a/Control-Escolar/public/css/style_login.css
+++ b/Control-Escolar/public/css/style_login.css
@@ -17,6 +17,7 @@ div.color-bg{
   width:100vw;
   height:100vh;
   background-color: rgba(0,56,101, 0.8);
+  overflow: auto;
 }
 
 div.logo{
@@ -84,14 +85,14 @@ form{
            background-color:#003865;
        } /*Color of underline*/
 
-@media (min-width:993px) {
+@media (min-width:993px){
   img.img-logo{
     width: 20em;
   }
 
   p.bienvenida{
     font-size: 24px;
-    margin-top: 10em;
+    margin-top: 10%;
   }
 
   p.footer{
